Bug 68933 r=sr=Mike Shaver Reimplemented the JavaEnabled() function done by jst@netscape